[project]
name = "amc-calendar"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Podnozov",email = "137218728+D-Pod-dev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.6.0,<8.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
